# OvaSim

./: .gitignore  CMakeLists.txt  ChangeVertices_cuda.cu  ChangeVertices_cuda.h  GLFWindow.cpp  GLFWindow.h  ImageProcess_cuda.cu  ImageProcess_cuda.h  LaunchParams.h  Model.cpp  Model.h  OvaSim.cpp  README.md  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  USLaunchParams.h  USRenderer.cpp  USRenderer.h  USdevicePrograms.cu  devicePrograms.cu  interaction.h  stb_image.h  stb_image_write.h  temp.cpp  tiny_obj_loader.h
CMake/: FindCUDA.cmake  FindOptiX.cmake
data/example1/: example1.scene  example2.scene
data/temp/: example1.scene
include/: CUDABuffer.h  DeviceWidget.h  DeviceWidget.ui  GLWidget.h  GlobalConfig.h  HistoryWidget.h  HistoryWidget.ui  Model.h  Scene.h  SimulatingWidget.h  SimulatingWidget.ui  USLaunchParams.h  USRenderer.h  UseDevice.h  choisewidget.h  choisewidget.ui  interaction.h  mainWindow.h  mainWindow.ui  optixhello.h  stb_image.h  stb_image_write.h  tiny_obj_loader.h
kernels/: ChangeVertices_cuda.cu  ChangeVertices_cuda.h  CreateTexture_cuda.cu  CreateTexture_cuda.h  ImageProcess_cuda.cu  ImageProcess_cuda.h
shaders/: USdevicePrograms.cu  draw_solid_color.cu
src/: DeviceWidget.cpp  GLWidget.cpp  GlobalConfig.cpp  HistoryWidget.cpp  Model.cpp  Scene.cpp  SimulatingWidget.cpp  USRenderer.cpp  UseDevice.cpp  choisewidget.cpp  main.cpp  mainWindow.cpp
support/: CMakeLists.txt
support/gdt/gdt/math/: constants.h  vec.h
sutil/: Exception.h
